# eth-mithril

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
circuit/: CMakeLists.txt  mixer.cpp  mixer.hpp  mixer_cli.cpp  mixer_selftest.cpp
circuit/gadgets/: CMakeLists.txt  mimc.hpp  sha256_eth_fields.hpp  sha256_ethereum.hpp
circuit/gadgets/SHA3IUF/: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  sha3.c  sha3.h  sha3sum.c  sha3test.c
ethsnarks/: CMakeLists.txt
ethsnarks/contracts/: Pairing.sol
ethsnarks/ethsnarks/: longsight.py  utils.py
ethsnarks/src/: stubs.cpp  utils.hpp
ethsnarks/src/gadgets/: CMakeLists.txt  longsightl.hpp  merkle_tree.cpp  merkle_tree.hpp  onewayfunction.hpp  sha256_many.cpp  sha256_many.hpp
ethsnarks/test/: test_merkle.py
iOSProver/iOSProver-lib/lib/: libgmp.dylib  libgmpxx.dylib
ios/: build_gmp.sh
ios/Hopper/: Cartfile  Cartfile.resolved  Podfile
ios/Hopper/CMixer/: module.map
ios/Hopper/Hopper/: AppDelegate.swift  CoreDataManager.swift  Hopper-Bridging-Header.h  Info.plist  Main.storyboard
ios/Hopper/Hopper.xcodeproj/: project.pbxproj
ios/Hopper/Hopper.xcodeproj/project.xcworkspace/xcuserdata/ovdbigge.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Hopper/Hopper.xcodeproj/xcshareddata/xcschemes/: Hopper.xcscheme
ios/Hopper/Hopper.xcodeproj/xcuserdata/ovdbigge.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Hopper/Hopper.xcworkspace/xcuserdata/ovdbigge.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Hopper/Hopper/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Hopper/Hopper/Base.lproj/: LaunchScreen.storyboard
ios/Hopper/Hopper/Model/: CommitmentUpdater.swift  ConfigParser.swift  EventFetcher.swift  MiMC.swift  MixerFactory.swift  MixerManager.swift  MixerRelayer.swift  Prover.swift  Relayer.swift  config.json
ios/Hopper/Hopper/Model/CoreData/: Commitment.swift
ios/Hopper/Hopper/View/: AddCommitmentViewController.swift  CommitmentTableViewCell.swift  CommitmentTableViewController.swift  SelectionTableViewController.swift  ShowMixerViewController.swift
ios/Hopper/depends/data/: mixer.vk.json
ios/Hopper/depends/include/: mixer.hpp
ios/iOSProver/: Cartfile  Cartfile.resolved  Podfile
ios/iOSProver/depends/data/: mixer.vk.json
ios/iOSProver/depends/lib/: libgmp.dylib  libgmpxx.dylib  libmixer.dylib
ios/iOSProver/iOSProver/: AppDelegate.swift  CoreDataManager.swift  Info.plist  Swift-Big-Number-Core.swift  ViewController.swift  iOSProver-Bridging-Header.h
ios/iOSProver/iOSProver-lib/include/: mixer.hpp
ios/iOSProver/iOSProver-lib/lib/: libgmp.dylib  libgmpxx.dylib  libmixer.dylib
ios/iOSProver/iOSProver.xcodeproj/: project.pbxproj
ios/iOSProver/iOSProver.xcworkspace/: contents.xcworkspacedata
ios/iOSProver/iOSProver.xcworkspace/xcuserdata/ovdbigge.xcuserdatad/: UserInterfaceState.xcuserstate
ios/iOSProver/iOSProver/Assets.xcassets/QRCodeIcon.imageset/: Contents.json
ios/iOSProver/iOSProver/Data/: Mixer.json  mixer.vk.json
ios/iOSProver/iOSProver/Model/: CommitmentUpdater.swift  EventFetcher.swift  MixerFactory.swift  MixerManager.swift  MixerRelayer.swift  Prover.swift  Relayer.swift  RestClient.swift  TransactionWatcher.swift
ios/iOSProver/iOSProver/Model/CoreData/: Commitment.swift
ios/iOSProver/iOSProver/View/: AddCommitmentViewController.swift  CommitmentTableViewCell.swift  CommitmentTableViewController.swift  FetchedResultTableViewController.swift  ShowMixerViewController.swift
ios/iOSProver/iOSProver/View/Base.lproj/: Main.storyboard
ios/iOSProver/linked.xcodeproj/: project.pbxproj
ios/iOSProver/linked.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/iOSProver/linked.xcodeproj/xcshareddata/xcschemes/: iOSProver.xcscheme
ios/iOSProver/linked.xcworkspace/xcuserdata/ovdbigge.xcuserdatad/: UserInterfaceState.xcuserstate
python/: mixer.py
python/test/: test_mixer.py
relayer/: Dockerfile  README.md  package-lock.json  package.json
relayer/src/: app.js  controller.js  schema.json
solidity/: Makefile  package.json  truffle.js  utils.js
solidity/contracts/: Migrations.sol  Mixer.sol
solidity/contracts/lib/: LongsightL.sol  MerkleTree.sol  MiMC.sol  MiMC_hash.sol  Pairing.sol  Verifier.sol
solidity/migrations/: 2_deploy_contracts.js
solidity/test/: mixer.js
solidity/test/helpers/: libmixer.js
wasm/: .gitignore  CMakeLists.txt  Makefile  README.md  dump-keys.js  libff.patch  selftest.js
wasm/example/: .gitignore  index.html  mixer.pk.raw
(+7 files in other folders)
